--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -20,4 +20,6 @@
 @import "partials/about-company.scss";
 @import "partials/contacts.scss";
 @import "partials/catalog.scss";
+@import "partials/homepage-adaptive.scss";
 
+@import "partials/catalog-adaptive.scss";
