--- a/src/views/partials/_footer.pug
+++ b/src/views/partials/_footer.pug
@@ -27,13 +27,13 @@ footer.site-footer
 							img(src="images/footer/button-icon.svg", alt="")
 
 				ul.social.socials-footer
-					li.social__item.social__item--green
+					li.social__item.social__item--green.social__item--sf
 						a.social__item-link
 							img(src="images/header/bot/social/whatsapp.svg", alt="")
-					li.social__item.social__item--blue
+					li.social__item.social__item--blue.social__item--sf
 						a.social__item-link
 							img(src="images/header/bot/social/telegram.svg", alt="")
-					li.social__item.social__item--viol
+					li.social__item.social__item--viol.social__item--sf
 						a.social__item-link 
 							img(src="images/header/bot/social/viber.svg", alt="")
 		.site-footer-bot
