--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -23,3 +23,5 @@
 @import "partials/homepage-adaptive.scss";
 
 @import "partials/catalog-adaptive.scss";
+@import "partials/contacts-adaptive.scss";
+@import "partials/about-company-adaptive.scss";
