--- a/src/views/about-company.pug
+++ b/src/views/about-company.pug
@@ -14,7 +14,7 @@ block main
 		.container.specialization-company__container
 			.specialization-company__inner
 				.specialization-company-left
-					h2.section-title Инвестиционная <br> Компания ГЕОМЕТРИЯ
+					h2.section-title.section-title--invest Инвестиционная <br> Компания ГЕОМЕТРИЯ
 					p.specialization-company-left__subtitle Специализируемся на услугах <br> в сфере коммерческой недвижимости:
 				
 				
