--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -10,15 +10,23 @@ header.site-header
 					a.num__item.num-item(href="tel:+78126464701") 8 (812) 64-64-701
 				.call-back.header-top-right__item
 					a.call-back-link.call-back-link--dark(href="#ex1") Перезвоните мне
-				a.login.header-top-right__item.button Войти
+				a.login.header-top-right__item.button.login--mob Войти
+				.sh-burger
+					span
 		.header-bottom
+			
 			nav.menu
 				.menu__list
 					a.menu__list-link(href="") Услуги
 					a.menu__list-link(href="") Каталог объектов
 					a.menu__list-link(href="") О компании
 					a.menu__list-link(href="") Контакты
-			ul.social 
+			.num.header-top-right__item.header-top-right__item--mob
+				a.num__item.num-item(href="tel:+74996850305") 8 (499) 685-03-05
+				a.num__item.num-item(href="tel:+78126464701") 8 (812) 64-64-701
+			.call-back.header-top-right__item.header-top-right__item--mob2
+				a.call-back-link.call-back-link--dark(href="#ex1") Перезвоните мне
+			ul.social.social-menu--mob
 				li.social__item.social__item--green
 					a.social__item-link
 						img(src="images/header/bot/social/whatsapp.svg", alt="")
@@ -29,11 +37,7 @@ header.site-header
 					a.social__item-link 
 						img(src="images/header/bot/social/viber.svg", alt="")
 			
+			
 
-
-
-
-	.sh-burger
-		span
 
 	
