--- a/src/views/partials/_footer.pug
+++ b/src/views/partials/_footer.pug
@@ -13,9 +13,9 @@ footer.site-footer
 
 			.site-footer-top__item
 				a.site-footer-top__item-link(href="") Услуги
-				a.site-footer-top__item-link(href="") Каталог объектов
-				a.site-footer-top__item-link(href="") О компании
-				a.site-footer-top__item-link(href="") Контакты
+				a.site-footer-top__item-link(href="/geometry/build/catalog.html") Каталог объектов
+				a.site-footer-top__item-link(href="/geometry/build/about-company.html") О компании
+				a.site-footer-top__item-link(href="/geometry/build/contacts.html") Контакты
 
 
 			.site-footer-top__item
