--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -18,9 +18,9 @@ header.site-header
 			nav.menu
 				.menu__list
 					a.menu__list-link(href="") Услуги
-					a.menu__list-link(href="") Каталог объектов
-					a.menu__list-link(href="") О компании
-					a.menu__list-link(href="") Контакты
+					a.menu__list-link(href="/geometry/build/catalog.html") Каталог объектов
+					a.menu__list-link(href="/geometry/build/about-company.html") О компании
+					a.menu__list-link(href="/geometry/build/contacts.html") Контакты
 			.num.header-top-right__item.header-top-right__item--mob
 				a.num__item.num-item(href="tel:+74996850305") 8 (499) 685-03-05
 				a.num__item.num-item(href="tel:+78126464701") 8 (812) 64-64-701
