--- a/src/views/partials/_header.pug
+++ b/src/views/partials/_header.pug
@@ -1,7 +1,7 @@
 header.site-header
 	.container.header-container 
 		.header-top
-			a.header-top-logo.logo(href="/")
+			a.header-top-logo.logo(href="/geometry/build/")
 				img(src="images/header/top/ht-logo.svg", alt="")
 			.header-top-right 
 				
