--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -23,6 +23,9 @@ html(lang="ru")
 			let vh = window.innerHeight * 0.01;
 			document.documentElement.style.setProperty('--vh', `${vh}px`);
 			});
+			
+			//!!!Изменить при натяжке
+			const homepageLink='/geometry/build/';
 		//title= `${page.title}`
 
 	body
