--- a/src/style/partials/contacts-adaptive.scss
+++ b/src/style/partials/contacts-adaptive.scss
@@ -32,6 +32,9 @@
 			width: 100%;
 			margin-top: 24px;
 			margin-left: 0px;
+			&--spb{
+				order: -1;
+			}
 		}
 		&__title{
 			margin-bottom: 0px;
