--- a/src/style/partials/homepage-adaptive.scss
+++ b/src/style/partials/homepage-adaptive.scss
@@ -168,7 +168,9 @@
 @media screen and (max-width: 680px){
 	
 	.clients-type{
+		padding: 0;
 		&-front{
+			padding: 40px 5px;
 			&__name{
 				font-size: 20px;
 			}
@@ -178,6 +180,12 @@
 			}
 		}
 		&-hidden{
+			position: relative;
+			opacity: 1;
+			pointer-events: all;
+			&__top{
+				display: none;
+			}
 			&__top-name{
 				font-size: 20px;
 			}
