--- a/src/views/contacts.pug
+++ b/src/views/contacts.pug
@@ -28,7 +28,7 @@ block main
 						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac0f89f2a0f80c39b34dbc00b5a1ea3fcaac64894248712021d17b2f03c507b10&amp;source=constructor" frameborder="0"></iframe>
 
 
-				.contacts__info
+				.contacts__info.contacts__info--spb
 					.contacts__info-text
 						.contacts__info-city г. Санкт-Петербург
 						.contacts__info-street Бухарестская, 32
