--- a/src/style/partials/homepage-adaptive.scss
+++ b/src/style/partials/homepage-adaptive.scss
@@ -170,6 +170,7 @@
 	.clients-type{
 		padding: 0;
 		&-front{
+			display: none;
 			padding: 40px 5px;
 			&__name{
 				font-size: 20px;
@@ -184,7 +185,7 @@
 			opacity: 1;
 			pointer-events: all;
 			&__top{
-				display: none;
+				padding: 40px 5px;
 			}
 			&__top-name{
 				font-size: 20px;
